Add block and inline styling

--- a/recipes/king-crab-appetizers.html
+++ b/recipes/king-crab-appetizers.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>King Crab Appetizers</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>King Crab Appetizers</h1>
-    <img src="../images/king-crab-appetizers.webp" alt="Image of king crab appetizers" height="310" width="310">
+    <h1 class="title">King Crab Appetizers</h1>
+    <img src="../images/king-crab-appetizers.webp" alt="Image of king crab appetizers" height="310" width="310" class="recipes-image">
     
-    <h2>Description</h2>
-    <p>These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
+    <h2 class="recipes-subtitle">Description</h2>
+    <p class="recipes-description">These crab tartlets have long since been a family favorite and are requested often at holiday get togethers.</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="recipes-subtitle">Ingredients</h2>
+    <ul class="recipes-ingredients">
         <li>2 (12 ounce) packages refrigerated biscuit dough</li>
         <li>1 (8 ounce) package cream cheese, softened</li>
         <li>1 (6 ounce) can crab meat, drained</li>
@@ -25,8 +26,8 @@
         <li>1 pinch paprika</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="recipes-subtitle">Steps</h2>
+    <ol class="recipes-steps">
         <li>
             <p>Preheat oven to 375 degrees F (190 degrees C). Lightly grease 12 tartlet pans.</p>
         </li>
