--- a/recipes/lobster-thermidor.html
+++ b/recipes/lobster-thermidor.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lobster Thermidor</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Lobster Thermidor</h1>
-    <img src="../images/lobster-thermidor.webp" alt="Image of lobster thermidor" height="310" width="310">
+    <h1 class="title">Lobster Thermidor</h1>
+    <img src="../images/lobster-thermidor.webp" alt="Image of lobster thermidor" height="310" width="310" class="recipes-image">
 
-    <h2>Description</h2>
-    <p>I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!</p>
+    <h2 class="recipes-subtitle">Description</h2>
+    <p class="recipes-description">I used a nice light sauce on this iconic special occasion dish--lobster thermidor--rather than the thick, cheesy sauce popular in the '80s. Lobster is sweet and rich tasting on its own, so the lighter sauce makes so much sense. And what's even better, you can prep these ahead of time and just pop them in the oven when your guests arrive!</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="recipes-subtitle">Ingredients</h2>
+    <ul class="recipes-ingredients">
         <li>4 (4 ounce) lobster tails</li>
         <li>3 tablespoons butter, divided</li>
         <li>2 tablespoons minced shallots</li>
@@ -30,8 +31,8 @@
         <li>2 teaspoons melted butter</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="recipes-subtitle">Steps</h2>
+    <ol class="recipes-steps">
         <li>
             <p>Cut bottom shell of lobster tails using kitchen shears along each side where it meets the top shell; do not remove the shell at this point.</p>
         </li>
