--- a/recipes/vasilopita.html
+++ b/recipes/vasilopita.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vasilopita</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <h1>Vasilopita</h1>
-    <img src="../images/vasilopita.webp" alt="Image of vasilopita" height="310" width="310">
+    <h1 class="title">Vasilopita</h1>
+    <img src="../images/vasilopita.webp" alt="Image of vasilopita" height="310" width="310" class="recipes-image">
 
-    <h2>Description</h2>
-    <p>Vasilopita is a Greek cake with a citrus flavor that's not too sweet. It's traditionally served for breakfast or brunch on New Year's Day. Each person gets a slice starting with the youngest — whoever gets the coin hidden in their piece will have good luck for the year!</p>
+    <h2 class="recipes-subtitle">Description</h2>
+    <p class="recipes-description">Vasilopita is a Greek cake with a citrus flavor that's not too sweet. It's traditionally served for breakfast or brunch on New Year's Day. Each person gets a slice starting with the youngest — whoever gets the coin hidden in their piece will have good luck for the year!</p>
 
-    <h2>Ingredients</h2>
-    <ul>
+    <h2 class="recipes-subtitle">Ingredients</h2>
+    <ul class="recipes-ingredients">
         <li>2 cups white sugar</li>
         <li>1 cup butter</li>
         <li>3 cups all-purpose flour</li>
@@ -26,8 +27,8 @@
         <li>2 tablespoons white sugar</li>
     </ul>
 
-    <h2>Steps</h2>
-    <ol>
+    <h2 class="recipes-subtitle">Steps</h2>
+    <ol class="recipes-steps">
         <li>
             <p>Preheat the oven to 350 degrees F (175 degrees C). Generously grease a 10-inch round cake pan.</p>
         </li>
