--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/king-crab-appetizers.html">King Crab Appetizers</a></li>
-        <li><a href="recipes/lobster-thermidor.html">Lobster Thermidor</a></li>
-        <li><a href="recipes/vasilopita.html">Vasilopita</a></li>
-    </ul>
+    <h1 class="title">Odin Recipes</h1>
+    <div class="recipes-list">
+        <ul>
+            <li><a href="recipes/king-crab-appetizers.html" class="recipes-name">King Crab Appetizers</a></li>
+            <li><a href="recipes/lobster-thermidor.html" class="recipes-name">Lobster Thermidor</a></li>
+            <li><a href="recipes/vasilopita.html" class="recipes-name">Vasilopita</a></li>
+        </ul>
+    </div>
 </body>
 </html>
